support create tasks for datasets

--- a/src/Client/public/styles/main.css
+++ b/src/Client/public/styles/main.css
@@ -115,6 +115,10 @@ button {
     padding: 0.5rem 1rem;
 }
 
+.button--fullwidth {
+    width: 100%;
+}
+
 .button--solid {
     background-color: rgba(0, 0, 0, 0.8);
 }
@@ -212,4 +216,14 @@ td {
 
     width: 100%;
     height: 100%;
+}
+
+h4 {
+    margin-top: 1.5rem;
+    margin-bottom: 0.5rem;
+}
+
+.checkbox__item span {
+    display: inline-block;
+    margin: 0 0.5rem;
 }
