--- a/src/Client/public/styles/main.css
+++ b/src/Client/public/styles/main.css
@@ -272,18 +272,39 @@ h4 {
 }
 
 .editor {
-    margin-top: 1rem;
+    margin: 1rem 0;
     border: 1px solid #f0f0f0;
 }
 
-.editor .asidebar {
-    padding: 0 0.5rem;
-    align-self: flex-start;
+.editor .square {
+    position: relative;
+
+    width: 100%;
+}
+
+.editor .content {
+    position: absolute;
+
+    width: 100%;
+    height: 100%;
 }
 
 .editor svg {
     display: block;
+
     width: 100%;
+    height: 100%;
+}
+
+.editor svg image {
+    width: 100%;
+    height: auto;
+}
+
+.editor .asidebar {
+    padding: 0 0.5rem;
+    border-left: 1px solid #f0f0f0;
+    align-self: flex-start;
 }
 
 .asidebar .label {
